force-app/main/default/objects/Prudential_Detail__c/Prudential_Detail__c.object-meta.xml
<CustomObject>
    <label>Prudential Detail</label>
    <nameField>
        <displayFormat>PDD-{0000000}</displayFormat>
        <label>Prudential Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prudential Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>