force-app/main/default/objects/Prudential_Detail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prudential Details</relationshipLabel>
    <relationshipName>Prudential_Details</relationshipName>
    <type>Lookup</type>
</CustomField>