force-app/main/default/objects/Prudential_Detail__c/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <description>Compliance of Provider</description>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Complete</fullName>
            </value>
            <value>
                <fullName>Minor Non Compliance</fullName>
            </value>
            <value>
                <fullName>Not yet determined</fullName>
            </value>
            <value>
                <fullName>Non Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>