force-app/main/default/objects/Prudential_Detail__c/fields/Financial_Year_Ending__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year_Ending__c</fullName>
    <description>Identifier of Annual Prudential Compliance Statement</description>
    <label>Financial Year Ending</label>
    <length>20</length>
    <type>Text</type>
</CustomField>