force-app/main/default/objects/Prudential_Detail__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <label>Form</label>
    <length>10</length>
    <type>Text</type>
</CustomField>