force-app/main/default/objects/Prudential_Detail__c/fields/GPMS_Compliance_Status_Check__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Compliance_Status_Check__c</fullName>
    <description>Populates through Integration.</description>
    <label>Compliance Status Check</label>
    <length>100</length>
    <type>Text</type>
</CustomField>