force-app/main/default/objects/Prudential_Detail__c/fields/Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Integration_ID__c</fullName>
    <externalId>true</externalId>
    <label>Integration ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>