force-app/main/default/objects/Prudential_Detail__c/fields/Number_of_RADs_held__c.field-meta.xml
<CustomField>
    <fullName>Number_of_RADs_held__c</fullName>
    <description>Number of Refundable Accommodation Deposits (RADs) held at the service</description>
    <label>Number of RADs held</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>