force-app/main/default/objects/Prudential_Detail__c/fields/Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ID__c</fullName>
    <externalId>true</externalId>
    <label>Oracle ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>