force-app/main/default/objects/Prudential_Detail__c/fields/Statement_Lodged_by_Approved_Provider__c.field-meta.xml
<CustomField>
    <fullName>Statement_Lodged_by_Approved_Provider__c</fullName>
    <description>Name of Approved Provider
who lodged the statement</description>
    <label>Statement Lodged by Approved Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>