force-app/main/default/objects/Prudential_Detail__c/fields/Statement_Status__c.field-meta.xml
<CustomField>
    <fullName>Statement_Status__c</fullName>
    <description>Status on delivery of statement</description>
    <label>Statement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Complete</fullName>
            </value>
            <value>
                <fullName>Will not lodge</fullName>
            </value>
            <value>
                <fullName>Waiting for statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>