force-app/main/default/objects/Prudential_Detail__c/fields/Value_of_RAD_balances__c.field-meta.xml
<CustomField>
    <fullName>Value_of_RAD_balances__c</fullName>
    <description>Value of Refundable
Accommodation Deposits
(RADs) held at the Service</description>
    <label>Value of RAD balances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>